# circleci-playground

./: Makefile  README.md  pyproject.toml
.circleci/: config.yml
circleci_test/: main.py
tests/: test_sample1.py  test_sample2.py  test_sample3.py  test_sample4.py
